parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    BREAK
    CHAN
    COMMENT
    CONST
    CONTINUE
    DEFER
    ELSE
    FALLTHROUGH
    GO
    GOTO
    IF
    ILLEGAL
    IMPORT
    INTERFACE
    NOT
    PACKAGE
    RANGE
    RETURN
    SELECT
    STRUCT
    TYPE

Grammar

Rule 0     S' -> codigo
Rule 1     codigo -> asignacion
Rule 2     codigo -> sentenciaSwitch
Rule 3     codigo -> funcion
Rule 4     codigo -> funcionSinArg
Rule 5     codigo -> funcionAnonima
Rule 6     codigo -> imprimir
Rule 7     codigo -> mapa
Rule 8     codigo -> array
Rule 9     codigo -> solicitudDatos
Rule 10    codigo -> slice
Rule 11    codigo -> for
Rule 12    codigo -> expresionAritmetica
Rule 13    funcion -> FUNC ID LPAREN argumentos RPAREN LBRACE subcodigo RBRACE
Rule 14    argumentos -> argumento
Rule 15    argumentos -> argumentoVariadico
Rule 16    argumentos -> argumento COMMA argumentos
Rule 17    argumentos -> argumentoVariadico COMMA argumentos
Rule 18    argumento -> ID tipoDato
Rule 19    argumentoVariadico -> ID PUNTO PUNTO PUNTO tipoDato
Rule 20    funcionSinArg -> FUNC ID LPAREN RPAREN LBRACE subcodigo RBRACE
Rule 21    funcionAnonima -> FUNC LPAREN RPAREN LBRACE subcodigo RBRACE LPAREN RPAREN
Rule 22    funcionAnonima -> FUNC LPAREN argumentos RPAREN LBRACE subcodigo RBRACE LPAREN RPAREN
Rule 23    subcodigo -> asignacionCorta
Rule 24    subcodigo -> asignacion
Rule 25    subcodigo -> imprimir
Rule 26    subcodigo -> solicitudDatos
Rule 27    sentenciaSwitch -> SWITCH ID LBRACE bloqueCasosSwitch casoDefault RBRACE
Rule 28    sentenciaSwitch -> SWITCH asignacionCorta SEMICOLON ID LBRACE bloqueCasosSwitch casoDefault RBRACE
Rule 29    sentenciaSwitch -> SWITCH LBRACE bloqueCasosBooleanos casoDefault RBRACE
Rule 30    bloqueCasosBooleanos -> casoBooleano
Rule 31    bloqueCasosBooleanos -> casoBooleano bloqueCasosBooleanos
Rule 32    casoBooleano -> CASE condiciones DOSPUNTOS subcodigo
Rule 33    casoBooleano -> CASE ID DOSPUNTOS subcodigo
Rule 34    casoDefault -> DEFAULT DOSPUNTOS subcodigo
Rule 35    casoDefault -> empty
Rule 36    bloqueCasosSwitch -> casoSwitch
Rule 37    bloqueCasosSwitch -> casoSwitch bloqueCasosSwitch
Rule 38    casoSwitch -> CASE valores DOSPUNTOS subcodigo
Rule 39    for -> FOR asignacionCorta SEMICOLON condiciones SEMICOLON autooperacion LBRACE subcodigo RBRACE
Rule 40    for -> FOR condiciones LBRACE subcodigo RBRACE
Rule 41    for -> FOR LBRACE subcodigo RBRACE
Rule 42    estructurasDeDatos -> mapa
Rule 43    estructurasDeDatos -> array
Rule 44    estructurasDeDatos -> slice
Rule 45    mapa -> MAP LBRACKET tipoDato RBRACKET tipoDato LBRACE RBRACE
Rule 46    mapa -> MAP LBRACKET tipoDato RBRACKET tipoDato
Rule 47    mapa -> MAP LBRACKET tipoDato RBRACKET tipoDato LBRACE elementosMapa RBRACE
Rule 48    elementosMapa -> elementoMapa
Rule 49    elementosMapa -> elementoMapa elementosMapa
Rule 50    elementoMapa -> valor DOSPUNTOS valor COMMA
Rule 51    array -> LBRACKET INT RBRACKET tipoDato
Rule 52    array -> LBRACKET INT RBRACKET tipoDato LBRACE RBRACE
Rule 53    array -> LBRACKET INT RBRACKET tipoDato LBRACE elementosArray RBRACE
Rule 54    elementosArray -> valor
Rule 55    elementosArray -> valor COMMA elementosArray
Rule 56    slice -> ID LBRACKET valor DOSPUNTOS valor RBRACKET
Rule 57    slice -> LBRACKET RBRACKET tipoDato LBRACE valores RBRACE
Rule 58    asignacion -> VAR ID tipoDato ASSIGN valor
Rule 59    asignacion -> VAR ID ASSIGN valor
Rule 60    asignacionCorta -> ID DOSPUNTOS ASSIGN valor
Rule 61    autoincremento -> ID PLUS PLUS
Rule 62    autodecremento -> ID MINUS MINUS
Rule 63    autooperacion -> autoincremento
Rule 64    autooperacion -> autodecremento
Rule 65    tipoDato -> FLOAT64_TYPE
Rule 66    tipoDato -> COMPLEX64_TYPE
Rule 67    tipoDato -> INT_TYPE
Rule 68    tipoDato -> BOOL_TYPE
Rule 69    tipoDato -> STRING_TYPE
Rule 70    valores -> valor
Rule 71    valores -> valor COMMA valores
Rule 72    valor -> FLOAT64
Rule 73    valor -> COMPLEX64
Rule 74    valor -> INT
Rule 75    valor -> BOOL
Rule 76    valor -> STRING
Rule 77    valor -> expresionesAritmeticas
Rule 78    valor -> condiciones
Rule 79    valor -> ID
Rule 80    valor -> estructurasDeDatos
Rule 81    expresionesAritmeticas -> expresionAritmetica
Rule 82    expresionesAritmeticas -> expresionAritmetica operador expresionesAritmeticas
Rule 83    expresionAritmetica -> valor operador valor
Rule 84    expresionAritmetica -> LPAREN valor operador valor RPAREN
Rule 85    operador -> PLUS
Rule 86    operador -> MINUS
Rule 87    operador -> TIMES
Rule 88    operador -> DIVIDE
Rule 89    operador -> MOD
Rule 90    condiciones -> condicion
Rule 91    condiciones -> condicion conector condiciones
Rule 92    conector -> AND
Rule 93    conector -> OR
Rule 94    condicion -> valor operadorComp valor
Rule 95    condicion -> BOOL
Rule 96    operadorComp -> NOT_EQUAL
Rule 97    operadorComp -> LESS_THAN
Rule 98    operadorComp -> LESS_EQUAL
Rule 99    operadorComp -> GREATER_THAN
Rule 100   operadorComp -> GREATER_EQUAL
Rule 101   operadorComp -> EQUAL
Rule 102   empty -> <empty>
Rule 103   imprimir -> FMT PUNTO PRINT_LN LPAREN valores RPAREN
Rule 104   imprimir -> FMT PUNTO PRINT_LN LPAREN RPAREN
Rule 105   solicitudDatos -> FMT PUNTO SCANLN LPAREN POINTER ID RPAREN

Terminals, with rules where they appear

AND                  : 92
ASSIGN               : 58 59 60
BOOL                 : 75 95
BOOL_TYPE            : 68
BREAK                : 
CASE                 : 32 33 38
CHAN                 : 
COMMA                : 16 17 50 55 71
COMMENT              : 
COMPLEX64            : 73
COMPLEX64_TYPE       : 66
CONST                : 
CONTINUE             : 
DEFAULT              : 34
DEFER                : 
DIVIDE               : 88
DOSPUNTOS            : 32 33 34 38 50 56 60
ELSE                 : 
EQUAL                : 101
FALLTHROUGH          : 
FLOAT64              : 72
FLOAT64_TYPE         : 65
FMT                  : 103 104 105
FOR                  : 39 40 41
FUNC                 : 13 20 21 22
GO                   : 
GOTO                 : 
GREATER_EQUAL        : 100
GREATER_THAN         : 99
ID                   : 13 18 19 20 27 28 33 56 58 59 60 61 62 79 105
IF                   : 
ILLEGAL              : 
IMPORT               : 
INT                  : 51 52 53 74
INTERFACE            : 
INT_TYPE             : 67
LBRACE               : 13 20 21 22 27 28 29 39 40 41 45 47 52 53 57
LBRACKET             : 45 46 47 51 52 53 56 57
LESS_EQUAL           : 98
LESS_THAN            : 97
LPAREN               : 13 20 21 21 22 22 84 103 104 105
MAP                  : 45 46 47
MINUS                : 62 62 86
MOD                  : 89
NOT                  : 
NOT_EQUAL            : 96
OR                   : 93
PACKAGE              : 
PLUS                 : 61 61 85
POINTER              : 105
PRINT_LN             : 103 104
PUNTO                : 19 19 19 103 104 105
RANGE                : 
RBRACE               : 13 20 21 22 27 28 29 39 40 41 45 47 52 53 57
RBRACKET             : 45 46 47 51 52 53 56 57
RETURN               : 
RPAREN               : 13 20 21 21 22 22 84 103 104 105
SCANLN               : 105
SELECT               : 
SEMICOLON            : 28 39 39
STRING               : 76
STRING_TYPE          : 69
STRUCT               : 
SWITCH               : 27 28 29
TIMES                : 87
TYPE                 : 
VAR                  : 58 59
error                : 

Nonterminals, with rules where they appear

argumento            : 14 16
argumentoVariadico   : 15 17
argumentos           : 13 16 17 22
array                : 8 43
asignacion           : 1 24
asignacionCorta      : 23 28 39
autodecremento       : 64
autoincremento       : 63
autooperacion        : 39
bloqueCasosBooleanos : 29 31
bloqueCasosSwitch    : 27 28 37
casoBooleano         : 30 31
casoDefault          : 27 28 29
casoSwitch           : 36 37
codigo               : 0
condicion            : 90 91
condiciones          : 32 39 40 78 91
conector             : 91
elementoMapa         : 48 49
elementosArray       : 53 55
elementosMapa        : 47 49
empty                : 35
estructurasDeDatos   : 80
expresionAritmetica  : 12 81 82
expresionesAritmeticas : 77 82
for                  : 11
funcion              : 3
funcionAnonima       : 5
funcionSinArg        : 4
imprimir             : 6 25
mapa                 : 7 42
operador             : 82 83 84
operadorComp         : 94
sentenciaSwitch      : 2
slice                : 10 44
solicitudDatos       : 9 26
subcodigo            : 13 20 21 22 32 33 34 38 39 40 41
tipoDato             : 18 19 45 45 46 46 47 47 51 52 53 57 58
valor                : 50 50 54 55 56 56 58 59 60 70 71 83 83 84 84 94 94
valores              : 38 57 71 103

Parsing method: LALR

state 0

    (0) S' -> . codigo
    (1) codigo -> . asignacion
    (2) codigo -> . sentenciaSwitch
    (3) codigo -> . funcion
    (4) codigo -> . funcionSinArg
    (5) codigo -> . funcionAnonima
    (6) codigo -> . imprimir
    (7) codigo -> . mapa
    (8) codigo -> . array
    (9) codigo -> . solicitudDatos
    (10) codigo -> . slice
    (11) codigo -> . for
    (12) codigo -> . expresionAritmetica
    (58) asignacion -> . VAR ID tipoDato ASSIGN valor
    (59) asignacion -> . VAR ID ASSIGN valor
    (27) sentenciaSwitch -> . SWITCH ID LBRACE bloqueCasosSwitch casoDefault RBRACE
    (28) sentenciaSwitch -> . SWITCH asignacionCorta SEMICOLON ID LBRACE bloqueCasosSwitch casoDefault RBRACE
    (29) sentenciaSwitch -> . SWITCH LBRACE bloqueCasosBooleanos casoDefault RBRACE
    (13) funcion -> . FUNC ID LPAREN argumentos RPAREN LBRACE subcodigo RBRACE
    (20) funcionSinArg -> . FUNC ID LPAREN RPAREN LBRACE subcodigo RBRACE
    (21) funcionAnonima -> . FUNC LPAREN RPAREN LBRACE subcodigo RBRACE LPAREN RPAREN
    (22) funcionAnonima -> . FUNC LPAREN argumentos RPAREN LBRACE subcodigo RBRACE LPAREN RPAREN
    (103) imprimir -> . FMT PUNTO PRINT_LN LPAREN valores RPAREN
    (104) imprimir -> . FMT PUNTO PRINT_LN LPAREN RPAREN
    (45) mapa -> . MAP LBRACKET tipoDato RBRACKET tipoDato LBRACE RBRACE
    (46) mapa -> . MAP LBRACKET tipoDato RBRACKET tipoDato
    (47) mapa -> . MAP LBRACKET tipoDato RBRACKET tipoDato LBRACE elementosMapa RBRACE
    (51) array -> . LBRACKET INT RBRACKET tipoDato
    (52) array -> . LBRACKET INT RBRACKET tipoDato LBRACE RBRACE
    (53) array -> . LBRACKET INT RBRACKET tipoDato LBRACE elementosArray RBRACE
    (105) solicitudDatos -> . FMT PUNTO SCANLN LPAREN POINTER ID RPAREN
    (56) slice -> . ID LBRACKET valor DOSPUNTOS valor RBRACKET
    (57) slice -> . LBRACKET RBRACKET tipoDato LBRACE valores RBRACE
    (39) for -> . FOR asignacionCorta SEMICOLON condiciones SEMICOLON autooperacion LBRACE subcodigo RBRACE
    (40) for -> . FOR condiciones LBRACE subcodigo RBRACE
    (41) for -> . FOR LBRACE subcodigo RBRACE
    (83) expresionAritmetica -> . valor operador valor
    (84) expresionAritmetica -> . LPAREN valor operador valor RPAREN
    (72) valor -> . FLOAT64
    (73) valor -> . COMPLEX64
    (74) valor -> . INT
    (75) valor -> . BOOL
    (76) valor -> . STRING
    (77) valor -> . expresionesAritmeticas
    (78) valor -> . condiciones
    (79) valor -> . ID
    (80) valor -> . estructurasDeDatos
    (81) expresionesAritmeticas -> . expresionAritmetica
    (82) expresionesAritmeticas -> . expresionAritmetica operador expresionesAritmeticas
    (90) condiciones -> . condicion
    (91) condiciones -> . condicion conector condiciones
    (42) estructurasDeDatos -> . mapa
    (43) estructurasDeDatos -> . array
    (44) estructurasDeDatos -> . slice
    (94) condicion -> . valor operadorComp valor
    (95) condicion -> . BOOL

    VAR             shift and go to state 14
    SWITCH          shift and go to state 17
    FUNC            shift and go to state 18
    FMT             shift and go to state 20
    MAP             shift and go to state 21
    LBRACKET        shift and go to state 22
    ID              shift and go to state 15
    FOR             shift and go to state 24
    LPAREN          shift and go to state 19
    FLOAT64         shift and go to state 26
    COMPLEX64       shift and go to state 27
    INT             shift and go to state 23
    BOOL            shift and go to state 28
    STRING          shift and go to state 29

    codigo                         shift and go to state 1
    asignacion                     shift and go to state 2
    sentenciaSwitch                shift and go to state 3
    funcion                        shift and go to state 4
    funcionSinArg                  shift and go to state 5
    funcionAnonima                 shift and go to state 6
    imprimir                       shift and go to state 7
    mapa                           shift and go to state 8
    array                          shift and go to state 9
    solicitudDatos                 shift and go to state 10
    slice                          shift and go to state 11
    for                            shift and go to state 12
    expresionAritmetica            shift and go to state 13
    valor                          shift and go to state 16
    condiciones                    shift and go to state 25
    expresionesAritmeticas         shift and go to state 30
    estructurasDeDatos             shift and go to state 31
    condicion                      shift and go to state 32

state 1

    (0) S' -> codigo .



state 2

    (1) codigo -> asignacion .

    $end            reduce using rule 1 (codigo -> asignacion .)


state 3

    (2) codigo -> sentenciaSwitch .

    $end            reduce using rule 2 (codigo -> sentenciaSwitch .)


state 4

    (3) codigo -> funcion .

    $end            reduce using rule 3 (codigo -> funcion .)


state 5

    (4) codigo -> funcionSinArg .

    $end            reduce using rule 4 (codigo -> funcionSinArg .)


state 6

    (5) codigo -> funcionAnonima .

    $end            reduce using rule 5 (codigo -> funcionAnonima .)


state 7

    (6) codigo -> imprimir .

    $end            reduce using rule 6 (codigo -> imprimir .)


state 8

    (7) codigo -> mapa .
    (42) estructurasDeDatos -> mapa .

    $end            reduce using rule 7 (codigo -> mapa .)
    PLUS            reduce using rule 42 (estructurasDeDatos -> mapa .)
    MINUS           reduce using rule 42 (estructurasDeDatos -> mapa .)
    TIMES           reduce using rule 42 (estructurasDeDatos -> mapa .)
    DIVIDE          reduce using rule 42 (estructurasDeDatos -> mapa .)
    MOD             reduce using rule 42 (estructurasDeDatos -> mapa .)
    NOT_EQUAL       reduce using rule 42 (estructurasDeDatos -> mapa .)
    LESS_THAN       reduce using rule 42 (estructurasDeDatos -> mapa .)
    LESS_EQUAL      reduce using rule 42 (estructurasDeDatos -> mapa .)
    GREATER_THAN    reduce using rule 42 (estructurasDeDatos -> mapa .)
    GREATER_EQUAL   reduce using rule 42 (estructurasDeDatos -> mapa .)
    EQUAL           reduce using rule 42 (estructurasDeDatos -> mapa .)


state 9

    (8) codigo -> array .
    (43) estructurasDeDatos -> array .

    $end            reduce using rule 8 (codigo -> array .)
    PLUS            reduce using rule 43 (estructurasDeDatos -> array .)
    MINUS           reduce using rule 43 (estructurasDeDatos -> array .)
    TIMES           reduce using rule 43 (estructurasDeDatos -> array .)
    DIVIDE          reduce using rule 43 (estructurasDeDatos -> array .)
    MOD             reduce using rule 43 (estructurasDeDatos -> array .)
    NOT_EQUAL       reduce using rule 43 (estructurasDeDatos -> array .)
    LESS_THAN       reduce using rule 43 (estructurasDeDatos -> array .)
    LESS_EQUAL      reduce using rule 43 (estructurasDeDatos -> array .)
    GREATER_THAN    reduce using rule 43 (estructurasDeDatos -> array .)
    GREATER_EQUAL   reduce using rule 43 (estructurasDeDatos -> array .)
    EQUAL           reduce using rule 43 (estructurasDeDatos -> array .)


state 10

    (9) codigo -> solicitudDatos .

    $end            reduce using rule 9 (codigo -> solicitudDatos .)


state 11

    (10) codigo -> slice .
    (44) estructurasDeDatos -> slice .

    $end            reduce using rule 10 (codigo -> slice .)
    PLUS            reduce using rule 44 (estructurasDeDatos -> slice .)
    MINUS           reduce using rule 44 (estructurasDeDatos -> slice .)
    TIMES           reduce using rule 44 (estructurasDeDatos -> slice .)
    DIVIDE          reduce using rule 44 (estructurasDeDatos -> slice .)
    MOD             reduce using rule 44 (estructurasDeDatos -> slice .)
    NOT_EQUAL       reduce using rule 44 (estructurasDeDatos -> slice .)
    LESS_THAN       reduce using rule 44 (estructurasDeDatos -> slice .)
    LESS_EQUAL      reduce using rule 44 (estructurasDeDatos -> slice .)
    GREATER_THAN    reduce using rule 44 (estructurasDeDatos -> slice .)
    GREATER_EQUAL   reduce using rule 44 (estructurasDeDatos -> slice .)
    EQUAL           reduce using rule 44 (estructurasDeDatos -> slice .)


state 12

    (11) codigo -> for .

    $end            reduce using rule 11 (codigo -> for .)


state 13

    (12) codigo -> expresionAritmetica .
    (81) expresionesAritmeticas -> expresionAritmetica .
    (82) expresionesAritmeticas -> expresionAritmetica . operador expresionesAritmeticas
    (85) operador -> . PLUS
    (86) operador -> . MINUS
    (87) operador -> . TIMES
    (88) operador -> . DIVIDE
    (89) operador -> . MOD

  ! shift/reduce conflict for PLUS resolved as shift
  ! shift/reduce conflict for MINUS resolved as shift
  ! shift/reduce conflict for TIMES resolved as shift
  ! shift/reduce conflict for DIVIDE resolved as shift
  ! shift/reduce conflict for MOD resolved as shift
    $end            reduce using rule 12 (codigo -> expresionAritmetica .)
    NOT_EQUAL       reduce using rule 81 (expresionesAritmeticas -> expresionAritmetica .)
    LESS_THAN       reduce using rule 81 (expresionesAritmeticas -> expresionAritmetica .)
    LESS_EQUAL      reduce using rule 81 (expresionesAritmeticas -> expresionAritmetica .)
    GREATER_THAN    reduce using rule 81 (expresionesAritmeticas -> expresionAritmetica .)
    GREATER_EQUAL   reduce using rule 81 (expresionesAritmeticas -> expresionAritmetica .)
    EQUAL           reduce using rule 81 (expresionesAritmeticas -> expresionAritmetica .)
    PLUS            shift and go to state 34
    MINUS           shift and go to state 35
    TIMES           shift and go to state 36
    DIVIDE          shift and go to state 37
    MOD             shift and go to state 38

  ! PLUS            [ reduce using rule 81 (expresionesAritmeticas -> expresionAritmetica .) ]
  ! MINUS           [ reduce using rule 81 (expresionesAritmeticas -> expresionAritmetica .) ]
  ! TIMES           [ reduce using rule 81 (expresionesAritmeticas -> expresionAritmetica .) ]
  ! DIVIDE          [ reduce using rule 81 (expresionesAritmeticas -> expresionAritmetica .) ]
  ! MOD             [ reduce using rule 81 (expresionesAritmeticas -> expresionAritmetica .) ]

    operador                       shift and go to state 33

state 14

    (58) asignacion -> VAR . ID tipoDato ASSIGN valor
    (59) asignacion -> VAR . ID ASSIGN valor

    ID              shift and go to state 39


state 15

    (56) slice -> ID . LBRACKET valor DOSPUNTOS valor RBRACKET
    (79) valor -> ID .

    LBRACKET        shift and go to state 40
    PLUS            reduce using rule 79 (valor -> ID .)
    MINUS           reduce using rule 79 (valor -> ID .)
    TIMES           reduce using rule 79 (valor -> ID .)
    DIVIDE          reduce using rule 79 (valor -> ID .)
    MOD             reduce using rule 79 (valor -> ID .)
    NOT_EQUAL       reduce using rule 79 (valor -> ID .)
    LESS_THAN       reduce using rule 79 (valor -> ID .)
    LESS_EQUAL      reduce using rule 79 (valor -> ID .)
    GREATER_THAN    reduce using rule 79 (valor -> ID .)
    GREATER_EQUAL   reduce using rule 79 (valor -> ID .)
    EQUAL           reduce using rule 79 (valor -> ID .)


state 16

    (83) expresionAritmetica -> valor . operador valor
    (94) condicion -> valor . operadorComp valor
    (85) operador -> . PLUS
    (86) operador -> . MINUS
    (87) operador -> . TIMES
    (88) operador -> . DIVIDE
    (89) operador -> . MOD
    (96) operadorComp -> . NOT_EQUAL
    (97) operadorComp -> . LESS_THAN
    (98) operadorComp -> . LESS_EQUAL
    (99) operadorComp -> . GREATER_THAN
    (100) operadorComp -> . GREATER_EQUAL
    (101) operadorComp -> . EQUAL

    PLUS            shift and go to state 34
    MINUS           shift and go to state 35
    TIMES           shift and go to state 36
    DIVIDE          shift and go to state 37
    MOD             shift and go to state 38
    NOT_EQUAL       shift and go to state 43
    LESS_THAN       shift and go to state 44
    LESS_EQUAL      shift and go to state 45
    GREATER_THAN    shift and go to state 46
    GREATER_EQUAL   shift and go to state 47
    EQUAL           shift and go to state 48

    operador                       shift and go to state 41
    operadorComp                   shift and go to state 42

state 17

    (27) sentenciaSwitch -> SWITCH . ID LBRACE bloqueCasosSwitch casoDefault RBRACE
    (28) sentenciaSwitch -> SWITCH . asignacionCorta SEMICOLON ID LBRACE bloqueCasosSwitch casoDefault RBRACE
    (29) sentenciaSwitch -> SWITCH . LBRACE bloqueCasosBooleanos casoDefault RBRACE
    (60) asignacionCorta -> . ID DOSPUNTOS ASSIGN valor

    ID              shift and go to state 49
    LBRACE          shift and go to state 50

    asignacionCorta                shift and go to state 51

state 18

    (13) funcion -> FUNC . ID LPAREN argumentos RPAREN LBRACE subcodigo RBRACE
    (20) funcionSinArg -> FUNC . ID LPAREN RPAREN LBRACE subcodigo RBRACE
    (21) funcionAnonima -> FUNC . LPAREN RPAREN LBRACE subcodigo RBRACE LPAREN RPAREN
    (22) funcionAnonima -> FUNC . LPAREN argumentos RPAREN LBRACE subcodigo RBRACE LPAREN RPAREN

    ID              shift and go to state 52
    LPAREN          shift and go to state 53


state 19
